--- a/Decision Tree Assignment.ipynb
+++ b/Decision Tree Assignment.ipynb
@@ -8,8 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Decide which type of decision tree you are implementing with this dataset\n",
+    "* Is a regular decision tree or random forests model the best performing?\n",
+    "* Is there a reason why?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +60,7 @@
        "      dtype='|S10')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,6 +68,62 @@
    "source": [
     "iris.target_names"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sepal length (cm)',\n",
+       " 'sepal width (cm)',\n",
+       " 'petal length (cm)',\n",
+       " 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.feature_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 4)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
